--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,4 +1,5 @@
 <resources>
     <string name="app_name">MintThursday</string>
+    <string name="add">add</string>
     <string name="press">Press</string>
 </resources>
